--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,32 @@
-# intellij specific
-.idea/
+### IntelliJ IDEA ###
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+PolynomialPlotter.iml
 
-# vscode specific
+### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+.idea/
+*.iml
+
+### VS Code ###
 .vscode/
+
+### Mac OS ###
+.DS_Store
